--- a/style.css
+++ b/style.css
@@ -71,13 +71,21 @@
                     padding: 20px;
                 }
                 .container h1 {
-                    font-size: 26px;
+                    font-size: 32px;
                 }
+                header {
+                    text-align: center;
+                    padding: 14px;
+                    background-color: #fff;
+                } 
+                header img{
+                height: 36px;
+                } 
             }
 
             @media only screen and (max-width: 480px) {
                 .container h1 {
-                    font-size: 24px;
+                    font-size: 28px;
                 }
                 .buttons {
                     flex-direction: column;
@@ -85,5 +93,14 @@
                 .button {
                     margin: 5px 0;
                 }
+                header {
+                    text-align: center;
+                    padding: 14px;
+                    background-color: #fff;
+                } 
+                header img{
+                height: 36px;
+                } 
+            
             }
         
