--- a/style.css
+++ b/style.css
@@ -308,11 +308,11 @@ body {
     
   }
   
-  html {
+/*   html {
     height: 100%;
     background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
     overflow: hidden;
-  }
+  } */
   
   #stars {
     opacity: 60%;
