--- a/style.css
+++ b/style.css
@@ -1,69 +1,62 @@
-$color: #F3F3F3;
-$stroke-width: 5px;
-$size: 136px;
-
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');
-
 * {
- margin: 0;
- padding: 0;
- box-sizing: border-box;
-  
-  body {
- background: black url("https://source.unsplash.com/random/1600x900?flower") no-repeat fixed center;
- width: 100vw;
- height: 100vh;
- display: flex;
- align-items: center;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+body {
+  background: white url("background.jpg") no-repeat fixed center;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .logo {
- width: 100%;
- display: flex;
- font-size: 120px;
- color: white;
- justify-content: center;
- align-items: center;
- padding: 25px;
- background: rgba(0,0,0,0.5);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px;
+  background: rgba(255,255,255,0.6);
   position: relative;
- 
-  text {
-   stroke-width: $stroke-width;
-   stroke-dasharray: 900;
-   stroke-dashoffset: -900;
-   animation: text 4s forwards 1;
-   animation-delay: 1s;
-  }
-  
-  .underline{
-    stroke-dasharray: 900;
-    stroke-dashoffset: 900;
-    animation: underline 4s forwards 1;
-    animation-delay: 5s;
-  }
+}
 
+text {
+  stroke-width: 5px;
+  stroke-dasharray: 900;
+  stroke-dashoffset: -900;
+  animation: text 4s forwards 1;
+  animation-delay: 1s;
+}
+
+.underline {
+  stroke-dasharray: 900;
+  stroke-dashoffset: 900;
+  animation: underline 4s forwards 1;
+  animation-delay: 5s;
 }
 
 @keyframes text {
- 75% {
-  fill: transparent;
-  stroke-dashoffset: 0;
-  stroke-width: $stroke-width;
- }
- 100% {
-  fill: $color;
-  stroke-dashoffset: 0;
-  stroke-width: 0;
- }
+  75% {
+    fill: transparent;
+    stroke-dashoffset: 0;
+    stroke-width: 5px;
+  }
+  100% {
+    fill: #000;
+    stroke-dashoffset: 0;
+    stroke-width: 0;
+  }
 }
 
 @keyframes underline {
- 75% {
-  stroke-dashoffset: 0;
- }
- 100% {
-  stroke-dashoffset: 0;
- }
+  75% {
+    stroke-dashoffset: 0;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
 }
